fix(plugins/plugin-client-common): top tab overflow buttons can have low contrast

--- a/plugins/plugin-client-common/web/scss/components/TopTabStripe/_mixins.scss
+++ b/plugins/plugin-client-common/web/scss/components/TopTabStripe/_mixins.scss
@@ -30,6 +30,12 @@ $height: 3em;
   }
 }
 
+@mixin TopTabStripeTabOverflowButton {
+  .pf-c-nav__scroll-button {
+    @content;
+  }
+}
+
 @mixin TopTabStripe_Main {
   .kui--top-tab-stripe-header--main {
     @content;
